# DS_BootCamp2025

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  _deploy.sh  dev.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: digitalocean-deploy.yml  docker-deploy.yml
app/: db.py  main.py  settings.py
app/agents/: evaluation_agent.py  hint_agent.py  interviewee_agent.py  utils.py
app/agents/interviewee_agents/: default_agent.py  self_promotion_agent.py
app/agents/prompts/: afraid_candidate_system_prompt.yaml  boring_candidate_system_prompt.yaml  business_literature_candidate_system_prompt.yaml  charismatic_candidate_system_prompt.yaml  evaluation_system_prompt.yaml  examle.json  funny_candidate_system_prompt.yaml  good_candidate_system_prompt.yaml  hint_agent_system_prompt.yaml  interrupt_candidate_system_prompt.yaml  junior_candidate_system_prompt.yaml  (+27 more)
app/api/: evaluation.py  interview.py
app/core/: config.py  constants.py  openai.py
app/data/: voices.py
app/domain/: models.py
app/frontend/: evaluation.html  index.html  interview.html  login.html  report.html  select-candidate.html
app/infrastructure/: __init__.py
app/model/: stt.py  tts.py  ttt.py
app/repositories/: evaluate.py  protocol.py
certs/: nginx.crt  nginx.key
config/: nginx-fastapi.conf  nginx.conf
front/: .babelrc  .eslintignore  .eslintrc.json  .prettierrc.js  package-lock.json  package.json  tsconfig.json
front/src/: App.styles.ts  envs.ts  index.tsx  routesConfig.tsx
front/templates/: template.hbs
front/webpack/: dev.ts  prod.ts
(+33 files in other folders)
